# GitHub-User-Activity

./: LICENSE  README.md  main.py  pyproject.toml
data/: data_events.json
environment/: .env.shared
functions/: __init__.py  activity.py  api.py
tests/: test_main.py
utilities/: __init__.py  exit.py  text.py  to_json.py
